<resources>
    <string name="app_name">Calculator</string>
    <string name="hint_text">Введiть данi</string>

    <string name="basicCalculator">Базовий калькулятор</string>
    <string name="basicCalculatorDescription">Вимагає мінімальну кількість вхідних даних і дає приблизний розрахунок</string>
    <string name="basicCalculatorRulesDescription">Даний калькулятор пропонує приблизний розрахунок вартості необхідного обладнання для теплої підлоги Вашої кімнати. У розрахунку прийняті наступні допущення:</string> 
    
    <string name="basicCalculatorRules1">- Теплоізолювання кімнати хороша (пінопласт мінімум 50 мм);</string>
    <string name="basicCalculatorRules2">- Розмір труби теплої підлоги 16х2 мм.</string>

    <string name="wall_height">Довжина приміщення</string>
    <string name="wall_height_description">Довга стіна приміщення</string>

    <string name="wall_weight">Ширина приміщення</string>
    <string name="wall_weight_description">Коротка стіна приміщення</string>

    <string name="field_description">Введіть дані</string>
    <string name="field_description_description">Введіть дані</string>

    <string name="field_step_long">Крок укладання труб</string>
    <string name="field_step_long_description">https://icma.com.ua/images/step-pipe.jpg</string>

    <string name="field_collector_distance">Відстань від колектора до контуру теплої підлоги</string>
    <string name="field_collector_distance_description">Довжина магістралі труби в одну сторону від колекторної шафи до початку кімнати з теплою підлогою</string>

    <string name="field_isolation">Теплоізоляція підлоги</string>
    <string name="field_isolation_description_optimal">Оптимальна - використовується оригінальна підкладка ICMA (Італія) згідно стандарту UNI EN 13163; \n Економ - використовуються пінопластові мати і комплектуючі виробництва Україна</string>
    <string name="field_isolation_description_econom">Економ - використовуються пінопластові мати і комплектуючі виробництва Україна</string>

    <string name="field_regulation">Автоматичне регулювання</string>
    <string name="field_regulation_description">Удосконалення системи управління теплою підлогою, передбачає за собою установку кімнатного термостата, блоку управління сервоприводами теплої підлоги, які відіб\'ються в комерційній пропозиції</string>

    <string name="btn_calculate">Розрахувати</string>
    <string name="btn_info"><u>Інформація</u></string>

    <string name="measure_metr">м</string>
    <string name="measure_sant">см</string>

    <string name="optimal">Оптимальна</string>
    <string name="econom">Економ</string>
    <string name="regulation_yes">Так</string>
    <string name="regilation_no">Нi</string>
    <string name="network_error">Увімкніть інтернет</string>
    <string name="height_error">Не правильна довжина приміщення</string>
    <string name="weight_error">Не правильна ширина приміщення</string>
    <string name="step_error">Виберіть відстань</string>
    <string name="collector_error">Не правильна відстань до колектора</string>
    <string name="isolation_error">Виберіть тип ізоляції</string>
    <string name="regulation_error">Виберіть тип регулювання</string>
    <string name="regulation">Авторегулювання</string>
    <string name="isolation">Ізоляція високої якості</string>
    <string name="enter_data">Вхідні дані</string>
    <string name="errorValue">n/a</string>
    <string name="done">Добре</string>
    <string name="recalculate">Знову</string>
    <string name="order">Замовити</string>
    <string name="sum">Сума:</string>
    <string name="item_list">Список деталей</string>
    <string name="see_calculate_values">Подивитись вхідні дані</string>
    <string name="recomendet_contur_count">Рекомендована кількість контурів:</string>
    <string name="loop_lenght">Загальна довжина труби:</string>
    <string name="result">Результати</string>
    <string name="name_example">Труба GOLD-PEX Icma 16х2мм 200 м №P198</string>
    <string name="price_for_one">Ціна за штуку:</string>
    <string name="price_sum">Итого:</string>
    <string name="room_lenght">Довжина примiщення</string>
    <string name="indent">&#160;—&#160;</string>
    <string name="save">Зберегти</string>
    <string name="meters">&#160;м.</string>
    <string name="save_result_dialog_hint">Название расчета</string>
    <string name="dialog_done">Сохранить</string>
    <string name="dialog_cancel">Отмена</string>
    <string name="save_dialog_title">Сохранить?</string>
    <string name="save_dialog_message">Введите название данного расчета</string>
    <string name="info_meters_dimen">м</string>
    <string name="toast_text_save_done">Сохранено!</string>
    <string name="toast_text_save_fail">Не удалось сохранить</string>
    <string name="save_dialog_error_text">Назовите данный расчет</string>
    <string name="saved_calculator_result_btn_text">Сохраненные расчеты</string>

    <string-array name="steps">
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>

</resources>
