<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.text.TextUtils"/>

        <variable
            name="result"
            type="com.orlinskas.calculator.data.model.CalculatorResultModel" />
    </data>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.main.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".presentation.main.MainActivity">

        <Button
            style="@style/TextButtonWithIcon"
            android:id="@+id/info_btn"
            app:icon="@drawable/ic_info_24px_rounded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/logo_image_view"
            android:layout_width="184dp"
            android:layout_height="71dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_logo_ru" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:background="?android:attr/actionBarItemBackground"
            android:text="@string/result"
            android:textAlignment="viewStart"
            android:textColor="@color/primaryText"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo_image_view" />

        <TextView
            android:id="@+id/length_magistral_field_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:text="@string/loop_lenght"
            android:textColor="@color/primaryText"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/length_magistral_value"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
            android:id="@+id/length_magistral_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@{String.valueOf(result.calculationResult.tubeLength) + @string/meters}"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
            android:id="@+id/contour_count_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@{String.valueOf(result.calculationResult.quantityContour)}"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/length_magistral_value" />

        <TextView
            android:id="@+id/contour_count_field_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:text="@string/recomendet_contur_count"
            android:textAlignment="viewEnd"
            android:textColor="@color/primaryText"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/contour_count_value"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/length_magistral_field_name" />

        <Button
            style="@style/OutlinedButtonWitIcon"
            app:icon="@drawable/ic_visibility_black_24dp"
            android:id="@+id/show_data_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/see_calculate_values"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contour_count_value" />

        <View
            android:id="@+id/activity_calculator_divider_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@color/field_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/show_data_btn" />

        <TextView
            android:id="@+id/title2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:background="?android:attr/actionBarItemBackground"
            android:text="@string/item_list"
            android:textAlignment="viewStart"
            android:textColor="@color/primaryText"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_calculator_divider_view" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/product_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title2" />

        <View
            android:id="@+id/divider_bottom_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@color/field_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/product_recycler_view" />

        <TextView
            android:id="@+id/price_field_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/sum"
            android:textAlignment="viewStart"
            android:textColor="@color/primaryText"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/price_value"
            app:layout_constraintTop_toBottomOf="@+id/divider_bottom_view" />

        <TextView
            android:id="@+id/price_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@{TextUtils.isEmpty(result.totalSum) ? @string/errorValue : result.totalSum}"
            android:textColor="@color/primaryText"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/divider_bottom_view" />

        <Button
            style="@style/DefaultButtonWithIcon"
            android:id="@+id/back_btn"
            app:icon="@drawable/ic_undo_black_24dp"
            android:layout_width="0dp"
            android:layout_marginEnd="8dp"
            android:text="@string/recalculate"
            app:layout_constraintEnd_toStartOf="@+id/save_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/price_value" />

        <Button
            style="@style/DefaultButtonWithIcon"
            android:id="@+id/save_btn"
            app:icon="@drawable/ic_write"
            android:layout_width="0dp"
            android:layout_marginStart="8dp"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/back_btn"
            app:layout_constraintTop_toBottomOf="@+id/price_value" />

        <Button
            android:id="@+id/contact_btn"
            style="@style/DefaultButtonWithIcon"
            android:layout_width="0dp"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            android:text="@string/order"
            app:icon="@drawable/ic_phone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/save_btn"
            app:layout_constraintStart_toStartOf="@+id/save_btn"
            app:layout_constraintTop_toBottomOf="@+id/save_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>

</layout>