<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardBackgroundColor="@color/field_background"
    app:cardCornerRadius="5dp"
    app:cardElevation="2dp">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:maxLines="2"
            android:text="@string/name_example"
            android:textAlignment="center"
            android:textColor="@color/primaryText"
            android:textSize="18sp" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/imageContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            app:cardCornerRadius="40dp"
            app:cardElevation="3dp">

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@mipmap/ic_launcher_round" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/price_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/count_value"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_toStartOf="@+id/price_count"
            android:text="@string/price_for_one"
            android:textColor="@color/primaryText"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/price_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/count_value"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="458"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/count_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageContainer"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/imageContainer"
            android:text="x"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/count_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageContainer"
            android:layout_marginStart="4dp"
            android:layout_toEndOf="@+id/count_text"
            android:text="3"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/over_price_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/articul"
            android:layout_marginEnd="16dp"
            android:layout_toStartOf="@+id/over_price"
            android:text="@string/price_sum"
            android:textColor="@color/primaryText"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/over_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/articul"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:text="1284"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/articul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageContainer"
            android:layout_alignStart="@+id/imageContainer"
            android:layout_alignEnd="@+id/imageContainer"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="5463"
            android:textAlignment="center" />

    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>